2008-05-05  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (child_destroy): Reset pid at the beginning.

2008-05-05  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.29~.

2008-04-27  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.28.

2008-04-27  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (rise_oom_defense): Change error to warning
	when the defender failed to execute.

2008-04-27  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/report.h (enum report_type): Add report_warning.
	(warning): New macro.
	* launcher/report.c (vreport): Handle report_warning.

2008-04-23  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (store_state): Call comm_msg_destroy.
	(load_state): Likewise.

2008-04-23  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.28~.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.27.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>

	* README: Add some documentation about version scripts.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>

	* README: Add some documentation for make based build systems.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h (comm_msg_set_magic): Rename to ...
	(comm_msg_put_magic): ... this. Fix all users.
	(comm_msg_pack_int): Rename to ...
	(comm_msg_put_int): ... this. Fix all users.
	(comm_msg_unpack_int): Rename to ...
	(comm_msg_get_int): ... this. Fix all users.
	(comm_msg_pack_str): Rename to ...
	(comm_msg_put_str): ... this. Fix all users.
	(comm_msg_unpack_str): Rename to ...
	(comm_msg_get_str): ... this. Fix all users.

2008-04-15  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.c (comm_msg_unpack_mem): Remove function.
	(comm_msg_put_u32): New function.
	(comm_msg_get_u32): Likewise.
	(comm_msg_set_magic): Use comm_msg_put_u32 instead of direct buffer
	access.
	(comm_msg_pack_int): Likewise.